@@ -249,6 +249,8 @@ OPTIMIZATIONS
 
 BUG FIXES
 
+PIG-1394: POCombinerPackage hold too much memory for InternalCachedBag (daijy)
+
 PIG-1374: PushDownForeachFlatten shall not push ForEach below Join if the flattened fields is used in the next statement (daijy)
 
 PIG-1336: Optimize POStore serialized into JobConf (daijy)
